--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # --- Required options --- #
 
 # Name of website
-title: My Blog
+title: Positive anything is better than negative nothing
 
 # Your name to show in the footer
 author: Wenlong Tian
@@ -15,9 +15,9 @@ author: Wenlong Tian
 
 navbar-links:
   About me: "https://tianwenlong001.github.io/wenlongtian/"
-  Travel: 
-  Beautiful Scenary:
-  Reading:
+  Recording: 
+  Thinking:
+  Learning:
 
 # --- Logo --- #
 
