--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author: Wenlong Tian
 # --- List of links in the navigation bar --- #
 
 navbar-links:
-  About me: "https://tianwenlong001.github.io/wenlongtian/"
+  About me: "/aboutme.md"
   Recording: 
   Thinking:
   Learning:
@@ -74,9 +74,9 @@ rss-description: This website is a virtual proof that I'm awesome
 
 # Select which social network share links to show in posts
 share-links-active:
-  twitter: true
-  facebook: true
-  linkedin: true
+  twitter: false
+  facebook: false
+  linkedin: false
   vk: false
 
 # How to display the link to your website in the footer
